# BigPoly

./: CMakeLists.txt  ReadMe.md
Cmake/: FindAtlab.cmake  FindChess.cmake  FindFutile.cmake  FindNTPoly.cmake  FindYAML.cmake
Database/: CMakeLists.txt  generatefortran.py  input.yaml
Source/: AutoYamlArgsModule.f90  CMakeLists.txt  ConversionModule.f90  FakeChessModule.f90  MatrixInverseModule.f90  MatrixPowerModule.f90  MultiplyMatricesModule.f90  SpillageModule.f90  main.f90
UnitTests/: CMakeLists.txt  hamiltonian_sparse.txt  overlap_sparse.txt
